--- a/github/shared-space/action.yaml
+++ b/github/shared-space/action.yaml
@@ -37,10 +37,10 @@ runs:
         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_key }}
       run: |
         # Check to see if the bucket exists
-        aws s3api head-bucket --bucket app-builder-075d30d3-d72e-4c50-9ec9-5c3551b7eaa3 2>/dev/null
+        aws s3api head-bucket --bucket app-builder-2f208dc3-12cb-449f-bc6d-d9adb9934ca0
         # If not, create it
         if [[ $? -ne 0 ]]; then        
-          aws s3control create-bucket --bucket app-builder-075d30d3-d72e-4c50-9ec9-5c3551b7eaa3
+          aws s3control create-bucket --bucket app-builder-2f208dc3-12cb-449f-bc6d-d9adb9934ca0
         fi
       shell: "bash -l {0}" # Allow commands to fail by removing the default "-e" argument
     - name: Terraform Init
