--- a/github/shared-space/action.yaml
+++ b/github/shared-space/action.yaml
@@ -37,14 +37,16 @@ runs:
         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_key }}
       run: |
         # Check to see if the bucket exists
-        aws s3api head-bucket --bucket app-builder-5e79c572-556e-4157-95b1-54978740dfa7 --region us-east-1 2>/dev/null
+        aws s3api head-bucket --bucket app-builder-e6cb686a-5e26-4f6e-a089-a9b336df705a --region us-east-1 2>/dev/null
         # If not, create it
         if [[ $? -ne 0 ]]; then        
-          aws s3 mb s3://app-builder-5e79c572-556e-4157-95b1-54978740dfa7 --region us-east-1
+          aws s3 mb s3://app-builder-e6cb686a-5e26-4f6e-a089-a9b336df705a --region us-east-1
         fi
       shell: "bash -l {0}" # Allow commands to fail by removing the default "-e" argument
     - name: Terraform Init
-      id: init
+      env:
+        AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key }}
+        AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_key }}
       run: terraform init
       working-directory: octopus
       shell: bash
