--- a/.github/workflows/eks-deployment.yaml
+++ b/.github/workflows/eks-deployment.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           octopus_server: ${{ secrets.OCTOPUS_SERVER }}
           octopus_apikey: ${{ secrets.OCTOPUS_APIKEY }}
-          octopus_project: "Octo App Builder"
+          octopus_space: "Octo App Builder"
           octopus_user_id: "Users-141"
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
