--- a/github/shared-infrastructure/action.yaml
+++ b/github/shared-infrastructure/action.yaml
@@ -56,7 +56,7 @@ runs:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key }}
         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_key }}
       run: terraform init
-      working-directory: octopus
+      working-directory: octopus/shared-infrastructure
       shell: bash
     - name: Terraform Apply
       env:
@@ -74,7 +74,7 @@ runs:
         -var="aws_region=${{ inputs.aws_region }}"
         -var="github_repo=${{ inputs.github_repo }}"
         -var="github_username=${{ inputs.github_username }}"
-      working-directory: octopus
+      working-directory: octopus/shared-infrastructure
       shell: bash
     - name: Terraform Collect Output
       id: terraform_output
@@ -82,5 +82,5 @@ runs:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key }}
         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_key }}
       run: echo "::set-output name=octopus_space_id::$(terraform output -raw octopus_space_id)"
-      working-directory: octopus
+      working-directory: octopus/shared-infrastructure
       shell: bash
