--- a/github/shared-space/action.yaml
+++ b/github/shared-space/action.yaml
@@ -69,6 +69,7 @@ runs:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key }}
         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_key }}
       run: |
+        terraform output -raw octopus_space_id
         SPACE_ID=$(terraform output -raw octopus_space_id)
         echo "Space ID: ${SPACE_ID}"
         echo "::set-output name=octopus_space_id::${SPACE_ID}"
