--- a/github/shared-space/action.yaml
+++ b/github/shared-space/action.yaml
@@ -21,7 +21,7 @@ inputs:
 outputs:
   octopus_space_id:
     description: "The Octopus space ID"
-    value: ${{ steps.step_output.outputs.octopus_space_id }}
+    value: ${{ steps.terraform_output.outputs.stdout }}
 runs:
   using: "composite"
   steps:
@@ -70,8 +70,4 @@ runs:
         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws_secret_key }}
       run: terraform output -raw octopus_space_id
       working-directory: octopus
-      shell: bash
-    - name: Set output vars
-      id: step_output
-      run: echo "::set-output name=octopus_space_id::${{ steps.terraform_output.outputs.stdout }}"
       shell: bash
