--- a/github/kubernetes-deployment/action.yaml
+++ b/github/kubernetes-deployment/action.yaml
@@ -32,10 +32,13 @@ runs:
   steps:
     - name: Clone code repo
       uses: actions/checkout@v2
+
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
+
     - name: Install AWS CLI
       uses: unfor19/install-aws-cli-action@v1
+
     - name: Create Terraform state S3 bucket
       env:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key }}
@@ -48,6 +51,7 @@ runs:
           aws s3 mb s3://app-builder-0eeb52d7-2df7-4605-b8c7-d22afc9b018a --region us-east-1
         fi
       shell: "bash -l {0}" # Allow commands to fail by removing the default "-e" argument
+
     - name: Terraform Init
       env:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key }}
@@ -55,6 +59,7 @@ runs:
       run: terraform init
       working-directory: terraform/kubernetes-deployment
       shell: bash
+
     - name: Terraform Apply
       env:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws_access_key }}
@@ -65,11 +70,7 @@ runs:
         -var="octopus_server=${{ inputs.octopus_server }}" 
         -var="octopus_apikey=${{ inputs.octopus_apikey }}"
         -var="octopus_space_id=${{ inputs.octopus_space_id }}"
-        -var="github_feed_token=${{ inputs.github_feed_token }}"
-        -var="aws_access_key=${{ inputs.aws_access_key }}"
-        -var="aws_secret_key=${{ inputs.aws_secret_key }}"
-        -var="aws_region=${{ inputs.aws_region }}"
-        -var="github_repo=${{ inputs.github_repo }}"
-        -var="github_username=${{ inputs.github_username }}"
+        -var="github_docker_feed_id=${{ inputs.github_docker_feed_id }}"
+        -var="dockerhub_feed_id=${{ inputs.dockerhub_feed_id }}"
       working-directory: terraform/kubernetes-deployment
       shell: bash
