--- a/.github/workflows/eks-deployment.yaml
+++ b/.github/workflows/eks-deployment.yaml
@@ -66,9 +66,10 @@ jobs:
           repository_owner: ${{ github.repository_owner }}
           octopus_aws_account_id: ${{ steps.shared_resources.outputs.aws_account_id }}
 
-#      - name: Build Java Microservice
-#        uses: ./github/java-microservice
-#        with:
-#          repository_owner: ${{ github.repository_owner }}
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          github_actor: ${{ github.actor }}
+      - name: Build Java Microservice
+        uses: ./github/java-microservice
+        with:
+          ecr_url: ${{ steps.ecr_resources.outputs.aws_ecr_repository_url }}
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: "us-east-1"
