--- a/.github/workflows/eks-deployment.yaml
+++ b/.github/workflows/eks-deployment.yaml
@@ -32,7 +32,7 @@ jobs:
           octopus_space_id: ${{ steps.shared_space.outputs.octopus_space_id }}
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: "us-east-1"
+          aws_region: "us-west-1"
           github_username: ${{ github.actor }}
           github_repo: ${{ github.repository }}
           github_feed_token: ${{ secrets.FEED_GITHUB_TOKEN }}
@@ -46,7 +46,8 @@ jobs:
           octopus_space_id: ${{ steps.shared_space.outputs.octopus_space_id }}
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: "us-east-1"
+          aws_region: "us-west-1"
+          aws_ecr_repository_name: "octopus-java-microservice"
 
       - name: Create Kubernetes Deployment Project
         uses: ./github/kubernetes-deployment
@@ -62,7 +63,7 @@ jobs:
           octopus_library_variable_set_id: ${{ steps.shared_resources.outputs.octopus_library_variable_set_id }}
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: "us-east-1"
+          aws_region: "us-west-1"
           repository_owner: ${{ github.repository_owner }}
           octopus_aws_account_id: ${{ steps.shared_resources.outputs.aws_account_id }}
 
@@ -72,4 +73,4 @@ jobs:
           image_tag: ${{ steps.ecr_resources.outputs.aws_ecr_repository_url }}
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: "us-east-1"
+          aws_region: "us-west-1"
